--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "match-sorter": "^7.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-rating": "^2.0.5",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.27.0",
+    "react-tabs": "^6.0.2",
+    "react-toastify": "^10.0.6",
+    "recharts": "^2.13.3",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
